# FEVER2021_SharedTask

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Create_Corpus.ipynb  Dataset_Statistics.ipynb  Document_Retrieval.ipynb  Error_analysis.ipynb  FEVEROUS.ipynb  README.md  Train_Data_Stats.ipynb  apache_beam_test.py  calculate_doc_retrieval_accuracy.py  convert_test_to_tapas_data.py  create_corpus.py  create_dataset_stats.py  create_id_label_map.py  create_index.py  create_sentence_entailment_data.py  create_tapas_data.py  create_tapas_tables.py  create_tfidf.py  create_title_tfidf.py  data_import.py  datasets.py  document_retrieval.py  document_retrieval_with_bm25.py  entailment_model_roberta.py  entailment_with_sentences_and_tables.py  entailment_with_t5.py  entailment_with_tapas.py  entailment_with_tapas_predict.py  eval_table_cell_retriever.py  eval_veracity_prediction_model.py  evaluate_final_results.py  fever-conda.txt  feverous_scorer.py  get_jsons.py  gpu_test.py  helper_functions.py  json_import.py  (+17 more)
src/FEVER2021_SharedTask_Martin36.egg-info/: PKG-INFO  SOURCES.txt
src/data_processing/: convert_test_to_tapas_data.py  create_corpus.py  create_corpus_stats.py  create_data.py  create_dataset_stats.py  create_final_results.py  create_id_label_map.py  create_sentence_entailment_data.py  create_stemmed_corpus.py  create_table_and_sentence_data.py  create_tapas_data.py  create_tapas_tables.py  merge_table_and_sentence_data.py  merge_table_and_sentence_data_test_set.py
src/doc_retrieval/: calculate_doc_retrieval_accuracy.py  create_tfidf.py  create_title_tfidf.py  (+8 more)
(+17 files in other folders)
