[metadata]
name = FEVER2021_SharedTask_Martin36
version = 0.0.1
author = Martin Funkquist
author_email = martin.funkquist@gmail.com
description = My contribution for the FEVER 2021 Shared Task
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Martin36/FEVER2021_SharedTask
project_urls =
    Bug Tracker = https://github.com/Martin36/FEVER2021_SharedTask/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
